<resources>
    <string name="content_authority">com.montoya.gabi.scorecard</string>
    <string name="app_name">Capstone</string>
    <string name="action_settings">Settings</string>
    <string name="action_signed_out">Sign out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_player_handicap">Player handicap</string>
    <string name="nav_scorecards">Scorecards</string>
    <string name="nav_current_scorecard">Current scorecard</string>
    <string name="nav_golf_fields">Golf fields</string>
    <string name="nav_favorite_golf_fields">Favorite golf fields</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_sign_out">Sign out</string>
    <string name="date_format">EEE d MMM yyyy</string>
    <string name="formatted_meters_length"> %1$d meters</string>
    <string name="formatted_yards_length"> %1$d yards</string>
    <string name="formatted_par">PAR %1$d</string>
    <string name="formatted_hole">Hole %1$d</string>
    <string name="golf_field_fake_name" translatable="false">Aranzazú country Club</string>
    <string name="golf_field_fake_out_value" translatable="false">1234 m</string>
    <string name="golf_field_fake_in_value" translatable="false">1034 m</string>
    <string name="golf_field_fake_total_value" translatable="false">2268 m</string>
    <string name="golf_field_fake_par_value" translatable="false">60</string>
    <string name="golf_field_out_label">OUT</string>
    <string name="golf_field_in_label">IN</string>
    <string name="golf_field_total_label">TOTAL</string>
    <string name="golf_field_par_label">PAR</string>
    <string name="title_activity_golf_field">New golf field</string>
    <string name="golf_field_title_new">New golf field</string>
    <string name="golf_field_title_view">View golf field</string>
    <string name="golf_field_title_edit">Edit golf field</string>
    <string name="tab_general">GENERAL</string>
    <string name="tab_out">OUT</string>
    <string name="tab_in">IN</string>
    <string name="tab_score">SCORE</string>
    <string name="golf_field_name_hint">Golf field Name</string>
    <string name="golf_field_length_unit_meter">meters</string>
    <string name="golf_field_length_unit_yards">yards</string>
    <string name="hint_length">0</string>
    <string name="golf_field_par">Par</string>
    <string name="golf_field_text_hole_1">Hole 1</string>
    <string name="golf_field_text_hole_2">Hole 2</string>
    <string name="golf_field_text_hole_3">Hole 3</string>
    <string name="golf_field_text_hole_4">Hole 4</string>
    <string name="golf_field_text_hole_5">Hole 5</string>
    <string name="golf_field_text_hole_6">Hole 6</string>
    <string name="golf_field_text_hole_7">Hole 7</string>
    <string name="golf_field_text_hole_8">Hole 8</string>
    <string name="golf_field_text_hole_9">Hole 9</string>
    <string name="golf_field_text_hole_10">Hole 10</string>
    <string name="golf_field_text_hole_11">Hole 11</string>
    <string name="golf_field_text_hole_12">Hole 12</string>
    <string name="golf_field_text_hole_13">Hole 13</string>
    <string name="golf_field_text_hole_14">Hole 14</string>
    <string name="golf_field_text_hole_15">Hole 15</string>
    <string name="golf_field_text_hole_16">Hole 16</string>
    <string name="golf_field_text_hole_17">Hole 17</string>
    <string name="golf_field_text_hole_18">Hole 18</string>
    <string name="golf_field_new_scorecard">New Scorecard</string>
    <string name="golf_field_save">Save</string>
    <string name="golf_field_edit">Edit</string>
    <string name="golf_field_delete">Delete</string>
    <string name="golf_field_favorite">Favorite</string>
    <string name="golf_field_err_save">There was an error while trying to save the golf field. Please verify the entered information and try it again.</string>
    <string name="golf_field_err_retrieve_golf_field">There was an error while trying to retrieve the golf field information.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="golf_field_view_fake_total_length" translatable="false">3220 meters</string>
    <string name="golf_field_view_fake_total_par" translatable="false">PAR 63</string>
    <string name="golf_field_view_fake_in_out_length" translatable="false">1020 meters</string>
    <string name="golf_field_view_fake_in_out_par" translatable="false">PAR 30</string>
    <string name="view_golf_field_invalid_id">Invalid golf field was selected</string>
    <string name="view_golf_field_no_handicap_defined">Current handicap hasn\'t been defined yet. Please enter your current handicap before creating a new Scorecard</string>
    <string name="title_activity_new_gol_field">New GolField</string>
    <string name="title_activity_view_golf_field">ViewGolfFieldActivity</string>
    <string name="settings_unit_length_label">Unit of length</string>
    <string name="settings_meters_description">Meters</string>
    <string name="settings_yards_description">Yards</string>
    <string name="player_handicap_empty">Current handicap</string>
    <string name="player_save_button">save</string>
    <string name="player_err_saving_handicap">There was an error while trying to save the current Handicap. Please verify the entered value and try to save it again.</string>
    <string name="player_save_confirmation">The entered Handicap was successful saved. Current Handicap is %1$d</string>
    <string name="a11y_current_handicap_empty">Enter your current handicap</string>
    <string name="a11y_save_button">save</string>
    <string name="a11y_current_handicap"> Current handicap %1$d</string>
    <string name="a11y_add_a_new_golf_field">Add a new golf field</string>
    <string name="a11y_golf_field_description">Golf field %1$s, %2$s out, %3$s in, %4$s total, par %5$d</string>
    <string name="a11y_golf_field_description_favorite">This golf field is flagged as favorite.</string>
    <string name="banner_ad_unit_id_handicap">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id_golf_fields">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id_new_golf_field">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstitial_ad_unit_id_new_scorecard">ca-app-pub-3940256099942544/1033173712</string>
    <string name="ad_error_load">There was an error while trying to load the Ad: %1$s</string>
    <string name="title_activity_current_scorecard">CurrentScorecardActivity</string>
    <string name="current_scorecard_not_defined_name">Golf Field name not defined</string>
    <string name="current_scorecard_total">TOTAL</string>
    <string name="current_scorecard_out">OUT</string>
    <string name="current_scorecard_in">IN</string>
    <string name="current_scorecard_no_scorecard">There is no Current Scorecard</string>
    <string name="current_scorecard_item_delete">Delete</string>
    <string name="current_scorecard_item_confirm">Confirm</string>
    <string name="current_scorecard_set_score_score">Score</string>
    <string name="current_scorecard_set_score_confirm">confirm</string>
    <string name="current_scorecard_out_score">Out score</string>
    <string name="current_scorecard_in_score">In score</string>
    <string name="current_scorecard_gross_score">Gross score</string>
    <string name="current_scorecard_handicap">Handicap</string>
    <string name="current_scorecard_net_score">Net score</string>
    <string name="current_scorecard_fake_yards">425 yards</string>
    <string name="current_scorecard_fake_par_4">Par 4</string>
    <string name="current_scorecard_fake_score_5">5</string>
    <string name="current_scorecard_fake_mas_1">+1</string>
    <string name="current_scorecard_fake_gf_name">Club de Campo Aranzazu</string>
    <string name="current_scorecard_fake_date">SUN 23 JUL 2017</string>
    <string name="current_scorecard_fake_length">1516 Yards</string>
    <string name="current_scorecard_fake_par">PAR 60</string>
    <string name="current_scorecard_fake_score_35">35</string>
    <string name="current_scorecard_fake_score_70">70</string>
    <string name="current_scorecard_fake_dif_4">+4</string>
    <string name="current_scorecard_fake_handicap">5</string>
    <string name="current_scorecard_fake_score_65">65</string>
    <string name="current_scorecard_fake_dif_2">+2</string>
    <string name="current_scorecard_a11y_no_scorecard">Currently there is no active Scorecard</string>
    <string name="current_scorecard_a11y_general_card">Current Scorecard General tab, Golf field %1$s, date %2$s, Total length %3$s %4$s, out %5$s %6$s, in %7$s %8$s</string>
    <string name="current_scorecard_a11y_hole_card">%1$s, length %2$s, %3$s, score %4$s %5$s</string>
    <string name="current_scorecard_a11y_score_card">Out score %1$s %2$s, In Score %3$s %4$s, Gross score %5$s %6$s, Handicap %7$s, Net score %8$s %9$s </string>
    <string name="scorecard_item_a11y_card">Golf field %1$s, date %2$s, gross score %3$s, handicap %4$s, net score %5$s, net Difference %6$s</string>
    <string name="provider_log_database_not_opnened">database could not be opened</string>
    <string name="provider_error_unknow_uri">Unknown uri:</string>
    <string name="provider_golf_field_not_inserted">Golf Field could not be inserted</string>
    <string name="provider_golf_field_hole_not_inserted">Golf Field Hole could not be inserted</string>
    <string name="provider_log_golf_field_delete_problem">There was a problem deleting the Golf Field.</string>
    <string name="provider_log_golf_field_hole_delete_problem">There was a problem deleting the Golf Field Holes.</string>
    <string name="provider_log_scorecard_not_inserted">Scorecard could not be inserted</string>
    <string name="provider_scorecard_hole_not_inserted">Scorecarsd Hole could not be inserted</string>
    <string name="provider_log_scorecard_delete_problem">There was a problem deleting the Scorecard.</string>
    <string name="provider_log_scorecard_hole_delete_problem">There was a problem deleting the Scorecard Holes.</string>
    <string name="current_scorecard_error_save">There was a problem while trying to confirm and save the current scorecard. Please verify that you have set the score in all the holes</string>
    <string name="title_activity_view_scorecard">Scorecard</string>
    <string name="view_scorecard_invalid_id">Invalid scorecard was selected</string>
    <string name="not_best_gross_title">Best Gross Score</string>
    <string name="not_best_gross_context">You have made your best gross score</string>
    <string name="not_best_gross_subtext">%1$s - Gross score %2$s  %3$s</string>
    <string name="not_best_gross_by_golf_context">You have made your best gross score in %1$s</string>
    <string name="not_best_gross_by_golf_subtext">Gross score %1$s  %2$s</string>
    <string name="not_best_net_title">Best Net Score</string>
    <string name="not_best_net_context">You have made your best net score</string>
    <string name="not_best_net_subtext">%1$s - Net score %2$s  %3$s</string>
    <string name="not_best_net_by_golf_context">You have made your best net score in %1$s</string>
    <string name="not_best_net_by_golf_subtext">Net score %1$s  %2$s</string>
    <string name="widget_error_empty_list">No scorecard information available</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="err_no_golf_fields">There are no golf fields to display</string>
    <string name="item_fake_dif">+ 2</string>
    <string name="item_fake_gross_value">80</string>
    <string name="item_gross_label">GROSS</string>
    <string name="item_fake_handicap_value">24</string>
    <string name="item_handicap_label">HANDICAP</string>
    <string name="item_fake_net_value">62</string>
    <string name="item_net_label">NET</string>
</resources>