<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_player_handicap"
            android:icon="@drawable/ic_action_player"
            android:title="@string/nav_player_handicap" />
        <item
            android:id="@+id/nav_scorecards"
            android:icon="@drawable/ic_action_scorecards"
            android:title="@string/nav_scorecards" />
        <item
            android:id="@+id/nav_current_scorecards"
            android:icon="@drawable/ic_action_current_scorecard"
            android:title="@string/nav_current_scorecard" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_golf_fields"
            android:icon="@drawable/ic_action_golf_fields"
            android:title="@string/nav_golf_fields" />

        <item
            android:id="@+id/nav_favorite_golf_fields"
            android:icon="@drawable/ic_action_favorite"
            android:title="@string/nav_favorite_golf_fields" />
    </group>



    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_action_sign_out"
            android:title="@string/nav_sign_out" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/nav_settings" />

    </group>



</menu>
