<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.montoya.gabi.scorecard.view.CurrentScorecardSetScoreActivity">

    <android.support.v4.widget.Space
        android:layout_height="24dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent" />

    <TextView
        android:id="@+id/set_score_hole_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/golf_field_text_hole_3"
        android:layout_gravity="center"/>

    <android.support.v4.widget.Space
        android:layout_height="24dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/set_score_length_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/current_scorecard_fake_yards"/>
        <TextView
            android:id="@+id/set_score_par_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/current_scorecard_fake_par_4"/>
    </LinearLayout>

    <android.support.v4.widget.Space
        android:layout_height="24dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent" />

    <EditText
        android:id="@+id/set_score_score_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/current_scorecard_set_score_score"
        android:inputType="number"
        android:textAlignment="center" />

    <android.support.v4.widget.Space
        android:layout_height="24dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent" />

    <Button
        android:id="@+id/set_score_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:text="@string/current_scorecard_set_score_confirm"
       />

    <android.support.v4.widget.Space
        android:layout_height="24dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent" />

</LinearLayout>
