<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/view_scorecard_score_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <android.support.v4.widget.Space
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/current_scorecard_out_score"
                    android:layout_columnWeight="2"/>

                <TextView
                    android:id="@+id/view_scorecard_out_score_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_scorecard_fake_score_35"
                    android:textAlignment="textEnd"
                    android:layout_columnWeight="1"/>

                <TextView
                    android:id="@+id/view_scorecard_out_dif_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_scorecard_fake_dif_4"
                    android:textAlignment="textEnd"
                    android:layout_columnWeight="1"/>

                <android.support.v4.widget.Space
                    android:layout_height="8dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_columnSpan="3"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/current_scorecard_in_score"
                    android:layout_columnWeight="2"/>

                <TextView
                    android:id="@+id/view_scorecard_in_score_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_scorecard_fake_score_35"
                    android:textAlignment="textEnd"
                    android:layout_columnWeight="1"/>

                <TextView
                    android:id="@+id/view_scorecard_in_dif_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_scorecard_fake_dif_4"
                    android:textAlignment="textEnd"
                    android:layout_columnWeight="1"/>

                <android.support.v4.widget.Space
                    android:layout_height="8dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_columnSpan="3"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/current_scorecard_gross_score"
                    android:layout_columnWeight="2"/>

                <TextView
                    android:id="@+id/view_scorecard_gross_score_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_scorecard_fake_score_70"
                    android:textAlignment="textEnd"
                    android:layout_columnWeight="1"/>

                <TextView
                    android:id="@+id/view_scorecard_gross_dif_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_scorecard_fake_dif_4"
                    android:textAlignment="textEnd"
                    android:layout_columnWeight="1"/>

                <android.support.v4.widget.Space
                    android:layout_height="24dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_columnSpan="3"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/current_scorecard_handicap"
                    android:layout_columnWeight="2"/>

                <TextView
                    android:id="@+id/view_scorecard_handicap_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_scorecard_fake_handicap"
                    android:textAlignment="textEnd"
                    android:layout_columnWeight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:layout_columnWeight="1"/>

                <android.support.v4.widget.Space
                    android:layout_height="24dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_columnSpan="3"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/current_scorecard_net_score"
                    android:layout_columnWeight="2"/>

                <TextView
                    android:id="@+id/view_scorecard_net_score_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_scorecard_fake_score_65"
                    android:textAlignment="textEnd"
                    android:layout_columnWeight="1"/>

                <TextView
                    android:id="@+id/view_scorecard_net_dif_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_scorecard_fake_dif_2"
                    android:textAlignment="textEnd"
                    android:layout_columnWeight="1"/>


            </GridLayout>


            <android.support.v4.widget.Space
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent" />


        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>