<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/widget_list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:textSize="16sp"
                    android:text="@string/current_scorecard_fake_date"
                    android:maxLines="1"
                    android:textColor="@color/font_SecondaryText_54"/>

                <TextView
                    android:id="@+id/txt_golf_field_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:textSize="24sp"
                    android:text="@string/golf_field_fake_name"
                    android:maxLines="1"
                    android:textColor="@color/font_SecondaryText_54"/>


            </LinearLayout>




            <TextView
                android:id="@+id/txt_score_dif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="0"
                android:layout_gravity="center_vertical|end"
                android:layout_weight="0"
                android:text="@string/item_fake_dif"
                android:textAlignment="center"
                android:textSize="28sp"
                android:textColor="@color/font_SecondaryText_54"
                />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_score_gross"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center"
                    android:text="@string/item_fake_gross_value"
                    android:textColor="@color/font_SecondaryText_54"/>

                <TextView
                    android:id="@+id/txt_label_gross"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center"
                    android:text="@string/item_gross_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/font_SecondaryText_54"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_handicap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center"
                    android:text="@string/item_fake_handicap_value"
                    android:textColor="@color/font_SecondaryText_54"/>

                <TextView
                    android:id="@+id/txt_label_handicap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center"
                    android:text="@string/item_handicap_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/font_SecondaryText_54"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_score_net"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center"
                    android:text="@string/item_fake_net_value"
                    android:textColor="@color/font_SecondaryText_54"/>

                <TextView
                    android:id="@+id/txt_label_net"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center"
                    android:text="@string/item_net_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/font_SecondaryText_54"/>


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
